se agregan cambios a botones de sitio web y a header

--- a/Protegert/pages/examenessalud.html
+++ b/Protegert/pages/examenessalud.html
@@ -11,8 +11,8 @@
 <body>  
   <header>
     <section class="encabezado">
-    <div><article> <img src="../Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo"></article></div> 
-    <div><article><img src="../Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos"></article></div>
+    <div><article> <img src="../Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo" class="encabezado_img"></article></div> 
+    <div><article><img src="../Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos" class="encabezado_img_2"></article></div>
 
     </section>  
     <H1>PROTEGIENDO LA SALUD DE TU EMPRESA</H1>      
@@ -32,14 +32,14 @@
       <section><div> 
         <h3>Examenes de ingreso</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam corporis sequi, neque ullam vero rem dolorem praesentium reiciendis delectus fugiat, nam quas nemo fugit, doloremque iusto culpa possimus velit quaerat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, impedit! Ipsa praesentium quia rerum incidunt, nesciunt, iste culpa porro nisi assumenda adipisci in eos est doloremque dolores, quidem doloribus quo?</p>  
-          <button><a href="../pages/turnos.html" alt="Turnos">Turnos</a></button></div></section>
+          <button class="tarjeta_boton"><a href="../pages/turnos.html" alt="Turnos" >Turnos</a></button></div></section>
         
       <section><div><h3>Examenes de egreso</h3> <p>Lorem ipsum dolor sit amet consectetzzzzzzur, adipisicing elit. Blanditiis consequuntur hic, fugiat cum ea facere eum amet, numquam voluptate dolorem rerum provident culpa, eaque tempore. Dicta asperiores quasi enim nulla?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis nesciunt quis doloremque cumque incidunt reiciendis, tempora vero labore, officia ipsam ipsa quia et ducimus quidem explicabo provident cum consequuntur Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis et, explicabo recusandae iure repellendus cum at nemo dolor doloremque corporis voluptatum voluptas ullam inventore, ad ut molestias facere est. Doloremque. modi.</p></div> 
-        <button><a href="./turnos.html#turno" alt="Turnos">Turnos</a></button></section>
+        <button class="tarjeta_boton"> <a href="./turnos.html#turno" alt="Turnos">Turnos</a></button></section>
       <section><div><h3>Examenes de cambio de funciones</h3> 
         <p> Lorem ipszum dolor sit amet consectetur adipisicing elit. Dolore voluptate ipsum modi velit commodi pariatur, possimus, blanditiis aliquid explicabo quisquam minima ad facilis mollitia eaque enim minus excepturi sed nisi! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, vel eum. Commodi nostrum eligendi deserunt eos ea quam quos enim necessitatibus aspernatur vitae dicta rerum quo consequatur rem, dolorum minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam temporibus veniam accusantium, excepturi porro a accusamus ullam fugiat eum vitae impedit. Illo perspiciatis reprehenderit veniam eligendi dicta culpa maxime molestias?</p>
       </div></section>
-        <button><a href="../pages/turnos.html" alt="Turnos">Turnos </a></button>
+        <button class="tarjeta_boton"><a href="../pages/turnos.html" alt="Turnos">Turnos </a></button>
 
 
 
