--- a/Protegert/pages/servicios.html
+++ b/Protegert/pages/servicios.html
@@ -36,38 +36,38 @@
             <a href="./examenessalud.html"  class="tarjeta_boton link" target="_blank">Ver más...</a>
           </article>
           <article class="services">
-            <h3 class="tarjeta_service">Examenes de Salud</h3>
-            <img src="../Imagen/servicios/examenes.jpg" alt="" class="serv-tarjeta">
+            <h3 class="tarjeta_service">Control de Ausentismo</h3>
+            <img src="../Imagen/servicios/control de aus.jpg" alt="" class="serv-tarjeta">
             <a href="./examenessalud.html"  class="tarjeta_boton" target="_blank">Ver más...</a>
           </article>
           <article class="services">
-            <h3 class="tarjeta_service">Examenes de Salud</h3>
-            <img src="../Imagen/servicios/examenes.jpg" alt="" class="serv-tarjeta">
+            <h3 class="tarjeta_service">Ausentismo Digital</h3>
+            <img src="../Imagen/servicios/au digital.jpg" alt="" class="serv-tarjeta">
             <a href="./examenessalud.html"  class="tarjeta_boton" target="_blank">Ver más...</a>
           </article>
           <article class="services">
-            <h3 class="tarjeta_service">Examenes de Salud</h3>
-            <img src="../Imagen/servicios/examenes.jpg" alt="" class="serv-tarjeta">
+            <h3 class="tarjeta_service">Ausentismo Prolongado </h3>
+            <img src="../Imagen/servicios/ausentismo prolong.jpg" alt="" class="serv-tarjeta">
             <a href="./examenessalud.html"  class="tarjeta_boton" target="_blank">Ver más...</a>
           </article>
           <article class="services">
-            <h3 class="tarjeta_service">Examenes de Salud</h3>
-            <img src="../Imagen/servicios/examenes.jpg" alt="" class="serv-tarjeta">
+            <h3 class="tarjeta_service">Asesoría Medica Legal</h3>
+            <img src="../Imagen/servicios/legal.jpg" alt="" class="serv-tarjeta">
             <a href="./examenessalud.html"  class="tarjeta_boton" target="_blank">Ver más...</a>
           </article>
           <article class="services">
-            <h3 class="tarjeta_service">Examenes de Salud</h3>
-            <img src="../Imagen/servicios/examenes.jpg" alt="" class="serv-tarjeta">
+            <h3 class="tarjeta_service">Medicina Laboral en planta </h3>
+            <img src="../Imagen/servicios/mediplanta.jpg" alt="" class="serv-tarjeta">
             <a href="./examenessalud.html"  class="tarjeta_boton" target="_blank">Ver más...</a>
           </article>
           <article class="services">
-            <h3 class="tarjeta_service">Examenes de Salud</h3>
-            <img src="../Imagen/servicios/examenes.jpg" alt="" class="serv-tarjeta">
+            <h3 class="tarjeta_service">Enfermería Laboral en planta</h3>
+            <img src="../Imagen/servicios/enf labor en planta.jpg" alt="" class="serv-tarjeta">
             <a href="./examenessalud.html"  class="tarjeta_boton" target="_blank">Ver más...</a>
           </article>
           <article class="services">
-            <h3 class="tarjeta_service">Examenes de Salud</h3>
-            <img src="../Imagen/servicios/examenes.jpg" alt="" class="serv-tarjeta">
+            <h3 class="tarjeta_service">Capacitaciones de Salud</h3>
+            <img src="../Imagen/servicios/capacit.jpg" alt="" class="serv-tarjeta">
             <a href="./examenessalud.html"  class="tarjeta_boton" target="_blank">Ver más...</a>
           </article>
         </section>
