--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <header>
     <section class="encabezado">
-    <div><article> <img src="./Protegert/Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo"></article></div> 
-    <div><article><img src="./Protegert/Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos"></article></div>
+    <div><article> <img src="./Protegert/Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo" class="encabezado_img"></article></div> 
+    <div><article><img src="./Protegert/Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos" class="encabezado_img_2"></article></div>
 
-    </section>  
+    </section>   
     <H1>PROTEGIENDO LA SALUD DE TU EMPRESA</H1>      
 
       <nav>
@@ -41,7 +41,7 @@
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sit vel, obcaecati consequatur 
               quo necessitatibus, est non nam porro eaque asperiores ipsum incidunt modi tempore tempora veritatis 
               doloribus sed esse.</p>
-                <a href="#contacto-protegert"></a> <button class="contacto">Contactanos</button></div>
+                <a href="#contacto-protegert"></a> <button class="tarjeta_boton">Contactanos</button></div>
             
       </section>
 
