modificaciones en los archivos con grids

--- a/Protegert/pages/medicinalaboral.html
+++ b/Protegert/pages/medicinalaboral.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="../../CSS/style.css">
     <title> Medicina Laboral | Protegert Salud</title>
 </head>
-<body>
+<body class="body"> 
   <header>
     <section class="encabezado">
     <div><article> <img src="../Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo" class="encabezado_img"></article></div> 
-    <div><article><img src="../Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos" class="encabezado_img_2"></article></div>
 
     </section>  
     <H1>PROTEGIENDO LA SALUD DE TU EMPRESA</H1>      
