--- a/Protegert/pages/servicios.html
+++ b/Protegert/pages/servicios.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="../../CSS/style.css">
     <title> Servicios | Protegert Salud</title>
   </head>
-  <body>
+  <body class="body">
     <header>
       <section class="encabezado">
       <div><article> <img src="../Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo" class="encabezado_img"></article></div> 
-      <div><article><img src="../Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos" class="encabezado_img_2"></article></div>
-  
       </section>  
       <H1>PROTEGIENDO LA SALUD DE TU EMPRESA</H1>      
   
         <nav>
           <ul class=".color-magenta">
             <li><a href="../../index.html" target="_blank">Inicio</a></li>
-            <li> <a href="./servicios.html">Servicios</a></li>  
+            <li> <a href="./servicios.html" >Servicios</a></li>  
             <li> <a href="./turnos.html" target="_blank">Turnos</a></li>
             <li><a href="#contacto-protegert">Contacto</a></li>
           </ul>
