--- a/Protegert/pages/turnos.html
+++ b/Protegert/pages/turnos.html
@@ -8,13 +8,12 @@
     <title>Turnos</title>
 </head>
 
-<body>
+<body class="body"> 
 
   
   <header>
     <section class="encabezado">
     <div><article> <img src="../Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo" class="encabezado_img"></article></div> 
-    <div><article><img src="../Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos" class="encabezado_img_2"></article></div>
 
     </section>   
     <H1>PROTEGIENDO LA SALUD DE TU EMPRESA</H1>      
@@ -30,21 +29,8 @@
   </header>
       <hr>
 
-
-
-    
-    
-
-
-
-
-
-
-
     <section id="turno">  
     <H2>Turnos</H2>
-
-
     <form action="">
       <label for="nombre-usuario"></label>
       <input type="text" id="nombre-usuario" placeholder="Nombre y Apellido*" required>
