--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
   <header>
     <section class="encabezado">
     <div><article> <img src="./Protegert/Imagen/WhatsApp Image 2021-12-01 at 22.38.21.jpeg" alt="Logo" class="encabezado_img"></article></div> 
-    <div><article><img src="./Protegert/Imagen/Logos/fondo-pag/medico-en-escritorio.jpg" alt="medicos" class="encabezado_img_2"></article></div>
 
     </section>   
-    <H1>PROTEGIENDO LA SALUD DE TU EMPRESA</H1>      
+    <H1 class="header_title">PROTEGIENDO LA SALUD DE TU EMPRESA</H1>      
 
-      <nav>
+      <nav class="header_nav">
         <ul class=".color-magenta">
           <li><a href="./index.html" target="_blank">Inicio</a></li>
           <li> <a href="./Protegert/pages/servicios.html">Servicios</a></li>  
@@ -41,7 +40,7 @@
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sit vel, obcaecati consequatur 
               quo necessitatibus, est non nam porro eaque asperiores ipsum incidunt modi tempore tempora veritatis 
               doloribus sed esse.</p>
-                <a href="#contacto-protegert"></a> <button class="tarjeta_boton">Contactanos</button></div>
+                <a href="#contacto-protegert"></a> <button class="contacto">Contactanos</button></div>
             
       </section>
 
